--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16488,16 +16488,16 @@ Wexler:
 
 # Inco (incomobile.com)
 Inco:
-  regex: '(?:Inco[ _](Aurora II|Sphere|Plain[_ ]2S?|Plain2 S|Flex 2S|S4|Bloom 2)|(Horizon_S|Horizon \+))(?:[);/ ]|$)'
+  regex: '(?:Inco[ _](Aurora II|Colors|Sphere|Plain[_ ]2S?|Plain2 S|Flex(?: 2S)?|S4|Bloom(?: 2)?)|(Horizon_S|Horizon \+))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(?:Inco[ _])?(Plain[_ ]2S?|Horizon_S|Horizon \+|Aurora II|Flex 2S|S4|Bloom 2)(?:[);/ ]|$)'
+    - regex: '(?:Inco[ _])?(Plain[_ ]2S?|Colors|Horizon_S|Horizon \+|Aurora II|Flex(?: 2S)?|S4|Bloom(?: 2)?)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Plain2 S'
       model: 'Plain 2S'
-    - regex: 'Inco Sphere(?:[);/ ]|$)'
+    - regex: 'Inco Sphere( 3)(?:[);/ ]|$)'
       device: 'tablet'
-      model: 'Sphere'
+      model: 'Sphere$1'
 
 # Wink
 Wink:
@@ -19950,7 +19950,7 @@ Wortmann:
 
 # BB Mobile
 BB Mobile:
-  regex: 'Techno[-_ ](8\.0|9\.7|TQ863Q|X595BT|S700BF|I700AJ|10.1 LTE TQ060X|7.0 LTE TQ763I|I785AP|I101BI)(?:[);/ ]|$)'
+  regex: 'bb-mobile|Techno[-_ ](8\.0|9\.7|TQ863Q|X595BT|S700BF|I700AJ|10.1 LTE TQ060X|7.0 LTE TQ763I|I785AP|I101BI)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'Techno[_ ]S700BF(?:[);/ ]|$)'
@@ -19967,6 +19967,8 @@ BB Mobile:
       model: 'Techno 10.1" Mozg I101BI'
     - regex: 'Techno[_ ]7.0 LTE TQ763I(?:[);/ ]|$)'
       model: 'Techno 7.0" Kalash LTE TQ763I'
+    - regex: '(FirstTab TP-17)(?:[);/ ]|$)'
+      model: '$1'
 
     - regex: 'Techno[_ ](9\.7|8\.0) 3G(?:[);/ ]|$)'
       model: 'Techno $1" 3G'
@@ -20073,7 +20075,7 @@ Jinga:
       model: 'Iron'
     - regex: 'Jinga Basco neo(?:[);/ ]|$)'
       model: 'Basco Neo'
-    - regex: '(?:Jinga )?Basco (L3|L[45]00|XS1|S2)(?:[);/ ]|$)'
+    - regex: '(?:Jinga[ _])?Basco[ _](L[13]|L[45]00|XS1|S2)(?:[);/ ]|$)'
       model: 'Basco $1'
     - regex: 'Jinga Trezor S1 Plus(?:[);/ ]|$)'
       model: 'Trezor S1 Plus'
@@ -20750,7 +20752,7 @@ Matrix:
 
 # Verico
 Verico:
-  regex: '(RP-UDM0[12]A|RP-UDP05A)(?:[);/ ]|$)'
+  regex: '(RP-UDM0[12]A|RP-UDP05A|JO-UQM10A)(?:[);/ ]|$)'
   device: 'tablet'
   model: 'Uni Pad $1'
 
@@ -21898,16 +21900,21 @@ Navcity:
     - regex: 'NP-752Go'
       model: 'NP-752 Go'
 
-# Jiake or Jake
-Jiake:
-  regex: '(?:JK(?:960|103) 3G|JK-?760)(?:[);/ ]|$)'
-  device: 'smartphone'
+# Jeka
+Jeka:
+  regex: '(?:JK(?:960|[71]03) 3G|JK702|JK101|JK[17]00 v2.0)(?:[);/ ]|$)'
+  device: 'tablet'
   models:
-    - regex: 'JK-?(760)(?:[);/ ]|$)'
-      model: 'JK-$1'
-    - regex: 'JK(960|103) 3G(?:[);/ ]|$)'
-      device: 'tablet'
-      model: 'JK-$1 3G'
+    - regex: 'JK(960|[71]03) 3G(?:[);/ ]|$)'
+      model: 'JK $1 3G'
+    - regex: 'JK(702|[17]00 v2.0|101)(?:[);/ ]|$)'
+      model: 'JK $1'
+
+# Jiake
+Jiake:
+  regex: '(?:JK-?760)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'JK-$1'
 
 # iQ&T (iqandt.com)
 'iQ&T':
@@ -22394,3 +22401,41 @@ STG Telecom:
   regex: 'STG[ _](A[12] Pro|[AS]1|X[1-3]|S[1-3]0|B10)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# UZ Mobile or Telecom Device Pro (idevice.uz)
+UZ Mobile:
+  regex: 'Uzbekistan(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'Uzbekistan'
+
+# KREZ
+KREZ:
+  regex: 'KREZ[_ ]'
+  device: 'smartphone'
+  models:
+    - regex: 'KREZ[_ ](SL502)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'KREZ[_ ](TM100[12]S8)(?:[);/ ]|$)'
+      device: 'tablet'
+      model: '$1 3G'
+
+# Kurio or KD Interactive (www.group-kd.com, kdplanet.com)
+Kurio:
+  regex: 'Kurio'
+  device: 'tablet'
+  models:
+    - regex: 'Kurio[_ ]?(10S|7S)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'Kurio[_ ]?Phone(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Phone C14500'
+
+# Inch
+Inch:
+  regex: 'Inch (?:Regulus (?:7.85|II)|Avior 3)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: '(Regulus 7.85)'
+      model: '$1"'
+    - regex: '(Regulus II|Avior 3)'
+      model: '$1'
